--- a/app/index.css
+++ b/app/index.css
@@ -4,6 +4,16 @@ body {
   Neue,sans-serif;
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
+  color: #d0021b;
+}
+
 ul {
   padding: 0;
 }
@@ -12,9 +22,27 @@ li {
   list-style-type: none;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
+.button {
+  color: #e6e6e6;
+  background: #0a0a0a;
+  border: none;
+  font-size: 16px;
+  border-radius: 3px;
+  width: 200px;
+  text-align: center;
+  display: block;
+  padding: 7px 0;
+  margin: 10px auto;
+}
+
+.button:hover:enabled {
+  background: linear-gradient(#1a1a1a,#0a0a0a);
+  color: #fff;
+  text-decoration: none;
+}
+
+.button:active {
+  transform: translateY(1px);
 }
 
 .languages {
@@ -51,4 +79,22 @@ li {
 .avatar {
   width: 150px;
   border-radius: 50%;
+}
+
+.nav {
+  display: flex;
+}
+
+.active {
+  font-weight: bold;
+}
+
+.nav li {
+  margin-right: 15px;
+}
+
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
