--- a/app/index.css
+++ b/app/index.css
@@ -130,3 +130,16 @@ li {
   flex-direction: column;
   align-items: center;
 }
+
+.reset {
+  border: none;
+  background: transparent;
+  color: #d0021b;
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
+.reset:hover {
+  cursor: pointer;
+}
